Fix homepage text overflow for desktop widths

--- a/style.css
+++ b/style.css
@@ -584,7 +584,8 @@ a {
     min-height: 0;
     margin: 35px 5vw 0 5vw;
     padding-bottom: 0px;
-    width: 1050px;
+    width: calc(100vw - max(250px, (100vw - 900px) / 2) - 10vw);
+    max-width: 1050px;
     gap: 20px;
   }
 
